Fixed the gap between navbar and rest of the page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+.navbar-inverse .navbar-brand {
+    height: 80px;
+}
