--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,7 +4,3 @@
 @import "prettyPhoto";
 @import "animate";
 @import "main";
-
-.navbar-brand {
-  text-transform: uppercase;
-}
